--- a/view/style.css
+++ b/view/style.css
@@ -10,8 +10,9 @@
   min-width: 40px;
   min-height: 40px;
   line-height: 40px;
-  font-size: 40px;
+  font-size: 24px;
   text-align: center;
+  font-weight: 500;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
