--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>2no</title>
-<script src="bundle.js"></script>
+<script src="../dist/bundle.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
