--- a/view/index.html
+++ b/view/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <img src="cross.svg" style="display: none;" />
-<button id="step-btn">Step</button>
+<!-- <button id="step-btn">Step</button> -->
 </body>
 </html>
